--- a/src/assets/sass/paper/_tables.scss
+++ b/src/assets/sass/paper/_tables.scss
@@ -1,5 +1,8 @@
 .table {
     overflow: hidden;
+    margin-top: 15px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 25px -5px rgba(0, 0, 0, 0.25);
 
     thead,
     tbody,
@@ -32,6 +35,7 @@
     > tfoot > tr > td {
         padding: 12px;
         vertical-align: middle;
+        text-align: center;
     }
 
     .th-description {
