--- a/src/assets/sass/paper/_buttons.scss
+++ b/src/assets/sass/paper/_buttons.scss
@@ -134,3 +134,17 @@
   margin-top: -1px;
   right: 8px;
 }
+
+.dg-btn--cancel {
+  color: #fefefe;
+  background-color: #41B883;
+}
+
+.dg-btn--ok {
+  color: #41B883;
+  border-color: #41B883;
+}
+
+.dg-circleG{
+  background-color: #41B883;
+}
